<resources>
    <string name="app_name">MELearn</string>
    <string name="add_a_deck">Add a deck</string>
    <string name="deckname">Deckname:</string>
    <string name="deckname_required">Deckname (required)</string>
    <string name="description">Description:</string>
    <string name="description_for_your_deck_this_is_optional">Description for your deck. This is optional.</string>
    <string name="add_deck">ADD DECK</string>
    <string name="settings">Settings</string>
    <string name="social">Social</string>
    <string name="add_card">ADD CARD</string>
    <string name="back">Back:</string>
    <string name="front">Front:</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
</resources>